corrected long title on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -625,7 +625,7 @@ a {
           color: #00DEFF;
           position: absolute;
           text-transform: uppercase;
-          letter-spacing: 5px;
+          letter-spacing: 0.5rem;
           transform: rotate(-6deg);
           text-shadow:
             0 0 0 #00DEFF,
